force-app/main/default/objects/Zendesk__ZendeskCustomField__c/Zendesk__ZendeskCustomField__c.object-meta.xml
<CustomObject>
    <label>Zendesk Support Custom Field</label>
    <nameField>
        <displayFormat>ZCF-{YY}{MM}{DD}{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Support Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>