force-app/main/default/objects/Zendesk__ZendeskCustomField__c/fields/Zendesk__SalesforceField__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__SalesforceField__c</fullName>
    <label>Salesforce Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>