force-app/main/default/objects/Zendesk__ZendeskCustomField__c/fields/Zendesk__SalesforceObject__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__SalesforceObject__c</fullName>
    <label>Salesforce Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>