force-app/main/default/objects/Zendesk__ZendeskCustomField__c/fields/Zendesk__Valid__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid</label>
    <type>Checkbox</type>
</CustomField>