force-app/main/default/objects/Zendesk__ZendeskCustomField__c/fields/Zendesk__ZendeskFieldLabel__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZendeskFieldLabel__c</fullName>
    <label>Zendesk Support Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>